# Promethyn

./: .gitignore  .voidguard-baseline.json  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  NOTICE  README.md  SECURITY.md  action.yml  mypy.ini  netlify.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  container-sandbox.yml  judge-eval-live.yml  judge-eval.yml  voidguard.yml
docs/: architecture.md  composition-study.md  demo-stale-branches.md  domains-grounding.md  domains-sql.md  extending-promethyn.md  gold-set-v3-protocol.md  judge-quality.md  observability.md  open-core-boundary.md  operations.md  orchestration.md  sandbox.md  security-model.md  shakeout-report.md  skip-sweep.md  soft-calibration-adoption-rule.md  soft-calibration.md  swarm-roles.md
docs/adr/: 0001-architecture.md
examples/: README.md  run_demo.py
harness/: __init__.py
harness/audit/: __init__.py  report.py
harness/eval/: __init__.py  (+1 more)
scripts/: check_hygiene.py  hygiene_terms.txt
site/: README.md  index.html  styles.css  thanks.html
spec/: CHANGELOG.md  invariants.md  protocol.md  swarm.md
tests/: conftest.py  test_rules.py
tools/voidguard/: LICENSE  README.md  action_comment.py  pyproject.toml
tools/voidguard/src/voidguard/: __init__.py  baseline.py  cli.py  engine.py  ghapi.py  repo.py  rules_class1.py  rules_class2.py
tools/voidguard/tests/fixtures/r1a_env_skip/void/.github/workflows/: ci.yml
tools/voidguard/tests/fixtures/r1a_env_skip/void/tests/: test_gated.py
tools/voidguard/tests/fixtures/r1c_marker/live/: pytest.ini
tools/voidguard/tests/fixtures/r1d_polyglot/live/: main_test.go
tools/voidguard/tests/fixtures/r1d_polyglot/live/.github/workflows/: ci.yml
tools/voidguard/tests/fixtures/r1d_polyglot/void/: app.test.js  lib.rs
tools/voidguard/tests/fixtures/r2a_mypy/flat/: mypy.ini
tools/voidguard/tests/fixtures/r2a_mypy/live/: mypy.ini
tools/voidguard/tests/fixtures/r2a_mypy/void/: mypy.ini
tools/voidguard/tests/fixtures/r2a_mypy/void/src/mypkg/: mod.py
tools/voidguard/tests/fixtures/r2b_scope/void/: mypy.ini
tools/voidguard/tests/fixtures/r2b_scope/void/.github/workflows/: ci.yml
tools/voidguard/tests/fixtures/r3a_isolated/void/: Dockerfile
tools/voidguard/tests/fixtures/r3a_isolated/void/.github/workflows/: ci.yml
tools/voidguard/tests/fixtures/r3b_unread/live/: app.py
tools/voidguard/tests/fixtures/r3b_unread/live/.github/workflows/: ci.yml
tools/voidguard/tests/fixtures/r3c_dockerarg/live/: Dockerfile
tools/voidguard/tests/fixtures/r4a_event/void/.github/workflows/: ci.yml
tools/voidguard/tests/fixtures/r4b_schedule/void/.github/workflows/: nightly.yml
tools/voidguard/tests/fixtures/r4d_golden/live/.github/workflows/: ci.yml
(+175 files in other folders)
