[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voidguard"
version = "0.1.0"
description = "Finds void guards: checks that are present, plausible, and verify nothing."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "William Nunlist" }]
keywords = ["ci", "testing", "static-analysis", "skipped-tests", "type-checking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
voidguard = "voidguard.cli:main"

[project.urls]
Source = "https://github.com/driivai/promethyn"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# the fixture repos contain their own (deliberately skipped/void) test files;
# they are scan TARGETS, never collected as this package's tests
norecursedirs = ["fixtures"]
